Figuring out design of drawing area elements

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -72,8 +72,8 @@
 	<p id="tagline">WeeWikiPaint is a nifty doodling tool. Go on, give it a try!</p>
 
 	<div id="drawing-area-container">
-		<div id="drawing-area" class="drawing-area"></div>
-		<div id="drawing-area-arrow"></div>
+		<div id="drawing-area" class="drawing-area__canvas"></div>
+		<div id="drawing-area-arrow" class="drawing-area__arrow"></div>
 		<button id="clear-button" type="button">Clear</button>
 	</div>
 
