Factored out drawing area's arrow element

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -71,10 +71,10 @@
 
 	<p id="tagline">WeeWikiPaint is a nifty doodling tool. Go on, give it a try!</p>
 
-	<div id="drawing-area-container">
+	<div id="drawing-area-container" class='drawing-area'>
 		<div id="drawing-area" class="drawing-area__canvas"></div>
 		<div id="drawing-area-arrow" class="drawing-area__arrow"></div>
-		<button id="clear-button" type="button">Clear</button>
+		<button id="clear-button" type="button" class="drawing-area__button">Clear</button>
 	</div>
 
 	<p id="footer">We’re developing this site LIVE at Let’s Code: Test-Driven JavaScript!</p>
