--- a/src/client/index.html
+++ b/src/client/index.html
@@ -74,7 +74,7 @@
 	<div id="drawing-area-container" class='drawing-area'>
 		<div id="drawing-area" class="drawing-area__canvas"></div>
 		<div id="drawing-area-arrow" class="drawing-area__arrow"></div>
-		<button id="clear-button" type="button" class="drawing-area__button">Clear</button>
+		<button id="clear-button" type="button" class="drawing-area__button button">Clear</button>
 	</div>
 
 	<p id="footer">We’re developing this site LIVE at Let’s Code: Test-Driven JavaScript!</p>
