Factored .button--action variant out of .button block

--- a/src/client/404.html
+++ b/src/client/404.html
@@ -67,6 +67,6 @@
 
     <p id="tagline-404">There’s only one page on this site...</p>
 
-    <a id="draw-something-404" class="button" href='/'>Go Draw Something</a>
+    <a id="draw-something-404" class="button button--action" href='/'>Go Draw Something</a>
 </body>
 </html>
