--- a/src/client/index.html
+++ b/src/client/index.html
@@ -78,7 +78,7 @@
 	</div>
 
 	<p id="footer">We’re developing this site LIVE at Let’s Code: Test-Driven JavaScript!</p>
-	<a id="join-us" class="button" href='http://www.letscodejavascript.com'>Join Us!</a>
+	<a id="join-us" class="button button--action" href='http://www.letscodejavascript.com'>Join Us!</a>
 
 	<script type="text/javascript">
 		$(function() {
