Factored out logo block

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -65,7 +65,7 @@
 </head>
 <body>
 
-	<div id="logo">
+	<div id="logo" class="logo">
 		<img src="/images/weewiki-logo.png" width="181" height="25" alt="WeeWikiPaint">
 	</div>
 
