Refactored 404 page to use .logo block

--- a/src/client/404.html
+++ b/src/client/404.html
@@ -59,7 +59,7 @@
 
 <body>
 
-    <div id="logo-404">
+    <div id="logo-404" class="logo">
       <img src="/images/weewiki-logo.png" width="181" height="25" alt="WeeWikiPaint">
     </div>
 
