--- a/src/client/404.html
+++ b/src/client/404.html
@@ -63,7 +63,7 @@
       <img src="/images/weewiki-logo.png" width="181" height="25" alt="WeeWikiPaint">
     </div>
 
-    <p id="header-404">404</p>
+    <p id="header-404" class="not-found">404</p>
 
     <p id="tagline-404">There’s only one page on this site...</p>
 
