Factored font and colors from body into theme

--- a/src/client/404.html
+++ b/src/client/404.html
@@ -57,7 +57,7 @@
    	</script>
 </head>
 
-<body>
+<body class="theme-lets-code">
 
     <div id="logo-404" class="logo">
       <img src="/images/weewiki-logo.png" width="181" height="25" alt="WeeWikiPaint">
