--- a/src/client/index.html
+++ b/src/client/index.html
@@ -63,7 +63,7 @@
 	</script>
 
 </head>
-<body>
+<body class="theme-lets-code">
 
 	<div id="logo" class="logo">
 		<img src="/images/weewiki-logo.png" width="181" height="25" alt="WeeWikiPaint">
