Factored out <strong> theme

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -77,7 +77,7 @@
 		<button id="clear-button" type="button" class="drawing-area__button button button--drawing">Clear</button>
 	</div>
 
-	<p id="footer">We’re developing this site LIVE at Let’s Code: Test-Driven JavaScript!</p>
+	<p id="footer"><strong id="footer-text">We’re developing this site LIVE at Let’s Code: Test-Driven JavaScript!</strong></p>
 	<a id="join-us" class="button button--action" href='http://www.letscodejavascript.com'>Join Us!</a>
 
 	<script type="text/javascript">
