Started on layout classes

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -65,20 +65,20 @@
 </head>
 <body class="theme-lets-code">
 
-	<div id="logo" class="logo">
+	<div id="logo" class="logo layout-center">
 		<img src="/images/weewiki-logo.png" width="181" height="25" alt="WeeWikiPaint">
 	</div>
 
-	<p id="tagline">WeeWikiPaint is a nifty doodling tool. Go on, give it a try!</p>
+	<p id="tagline" class="layout-center">WeeWikiPaint is a nifty doodling tool. Go on, give it a try!</p>
 
-	<div id="drawing-area-container" class='drawing-area'>
+	<div id="drawing-area-container" class="drawing-area layout-center">
 		<div id="drawing-area" class="drawing-area__canvas"></div>
 		<div id="drawing-area-arrow" class="drawing-area__arrow"></div>
 		<button id="clear-button" type="button" class="drawing-area__button button button--drawing">Clear</button>
 	</div>
 
-	<p id="footer"><strong id="footer-text">We’re developing this site LIVE at Let’s Code: Test-Driven JavaScript!</strong></p>
-	<a id="join-us" class="button button--action" href='http://www.letscodejavascript.com'>Join Us!</a>
+	<p id="footer" class="layout-center"><strong id="footer-text">We’re developing this site LIVE at Let’s Code: Test-Driven JavaScript!</strong></p>
+	<a id="join-us" class="button button--action layout-center" href='http://www.letscodejavascript.com'>Join Us!</a>
 
 	<script type="text/javascript">
 		$(function() {
