Implemented 'layout-width-*' classes

--- a/src/client/404.html
+++ b/src/client/404.html
@@ -67,6 +67,6 @@
 
     <p id="tagline-404" class="layout-center layout-center-text">There’s only one page on this site...</p>
 
-    <a id="draw-something-404" class="button button--action layout-center" href='/'>Go Draw Something</a>
+    <a id="draw-something-404" class="layout-width-button layout-center button button--action" href='/'>Go Draw Something</a>
 </body>
 </html>
