--- a/src/client/index.html
+++ b/src/client/index.html
@@ -78,7 +78,7 @@
 	</div>
 
 	<p id="footer" class="layout-center layout-center-text"><strong id="footer-text">We’re developing this site LIVE at Let’s Code: Test-Driven JavaScript!</strong></p>
-	<a id="join-us" class="layout-center button button--action" href='http://www.letscodejavascript.com'>Join Us!</a>
+	<a id="join-us" class="layout-width-button layout-center button button--action" href='http://www.letscodejavascript.com'>Join Us!</a>
 
 	<script type="text/javascript">
 		$(function() {
