Moved home page vertical layout CSS into index.html

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -65,20 +65,23 @@
 </head>
 <body class="theme-lets-code">
 
-	<div id="logo" class="logo layout-center">
+	<div id="logo" class="logo layout-center" style="margin-top: 12px;">
 		<img src="/images/weewiki-logo.png" width="181" height="25" alt="WeeWikiPaint">
 	</div>
 
-	<p id="tagline" class="layout-center layout-center-text">WeeWikiPaint is a nifty doodling tool. Go on, give it a try!</p>
+	<p id="tagline" class="layout-center layout-center-text" style="margin-top: 5px; margin-bottom: 0px;">WeeWikiPaint is a nifty doodling tool. Go on, give it a try!</p>
 
-	<div id="drawing-area-container" class="layout-width-full layout-center drawing-area">
+	<div id="drawing-area-container" class="layout-width-full layout-center drawing-area" style="margin-top: 10px;">
 		<div id="drawing-area" class="drawing-area__canvas"></div>
 		<div id="drawing-area-arrow" class="drawing-area__arrow"></div>
 		<button id="clear-button" type="button" class="drawing-area__button button button--drawing">Clear</button>
 	</div>
 
-	<p id="footer" class="layout-center layout-center-text"><strong id="footer-text">We’re developing this site LIVE at Let’s Code: Test-Driven JavaScript!</strong></p>
-	<a id="join-us" class="layout-width-button layout-center button button--action" href='http://www.letscodejavascript.com'>Join Us!</a>
+	<p id="footer" class="layout-center layout-center-text" style="margin-top: 13px; margin-bottom: 0;">
+		<strong id="footer-text">We’re developing this site LIVE at Let’s Code: Test-Driven JavaScript!</strong>
+	</p>
+
+	<a id="join-us" class="layout-width-button layout-center button button--action" style="margin-top: 13px;" href='http://www.letscodejavascript.com'>Join Us!</a>
 
 	<script type="text/javascript">
 		$(function() {
