Moved 404 page's CSS into 404.html

--- a/src/client/404.html
+++ b/src/client/404.html
@@ -59,14 +59,14 @@
 
 <body class="theme-lets-code">
 
-    <div id="logo-404" class="logo layout-center">
+    <div id="logo-404" class="logo layout-center" style="margin-top: 60px;">
       <img src="/images/weewiki-logo.png" width="181" height="25" alt="WeeWikiPaint">
     </div>
 
-    <p id="header-404" class="not-found layout-center">404</p>
+    <p id="header-404" class="not-found layout-center" style="margin-top: 0;margin-bottom: 0;">404</p>
 
-    <p id="tagline-404" class="layout-center layout-center-text">There’s only one page on this site...</p>
+    <p id="tagline-404" class="layout-center layout-center-text" style="margin-top: 18px;">There’s only one page on this site...</p>
 
-    <a id="draw-something-404" class="layout-width-button layout-center button button--action" href='/'>Go Draw Something</a>
+    <a id="draw-something-404" class="layout-width-button layout-center button button--action" style="margin-top: 18px;" href="/">Go Draw Something</a>
 </body>
 </html>
