Got build working with HTML and CSS in content/ dir

--- a/src/client/content/index.html
+++ b/src/client/content/index.html
@@ -5,7 +5,7 @@
 	<title>WeeWikiPaint</title>
 
 	<!-- #cat min.css -->
-	<link rel="stylesheet" type="text/css" href="../vendor/normalize-3.0.2.css">
+	<link rel="stylesheet" type="text/css" href="./vendor/normalize-3.0.2.css">
 	<link rel="stylesheet" type="text/css" href="./screen.css">
 	<!-- endcat -->
 
