--- a/src/client/content/404.html
+++ b/src/client/content/404.html
@@ -5,7 +5,7 @@
     <title>404: Not Found</title>
 
     <!-- #cat min.css -->
-		<link rel="stylesheet" type="text/css" href="../vendor/normalize-3.0.2.css">
+		<link rel="stylesheet" type="text/css" href="./vendor/normalize-3.0.2.css">
    	<link rel="stylesheet" type="text/css" href="./screen.css">
    	<!-- endcat -->
 
