--- a/src/client/content/index.html
+++ b/src/client/content/index.html
@@ -11,6 +11,7 @@
 
 	<script src="vendor/jquery-1.8.3.min.js" type="text/javascript"></script>
 	<script src="vendor/raphael-2.1.2.min.js" type="text/javascript"></script>
+	<script src="vendor/socket.io-1.4.5.js" type="text/javascript"></script>
 	<!-- #cat app.min.js -->
 	<script src="bundle.js" type="text/javascript"></script>
 	<!-- endcat -->
@@ -87,11 +88,12 @@
 		$(function() {
 			var client = require("./client.js");
 			var HtmlElement = require("./html_element.js");
+			var RealTimeConnection = require("./real_time_connection.js");
 
 			client.drawingAreaCanvas = client.initializeDrawingArea({
 				drawingAreaDiv: HtmlElement.fromId("drawing-area"),
 				clearScreenButton: HtmlElement.fromId("clear-button")
-			});
+			}, new RealTimeConnection());
 		});
 	</script>
 
