--- a/src/client/content/index.html
+++ b/src/client/content/index.html
@@ -93,7 +93,7 @@
 			client.drawingAreaCanvas = client.initializeDrawingArea({
 				drawingAreaDiv: HtmlElement.fromId("drawing-area"),
 				clearScreenButton: HtmlElement.fromId("clear-button"),
-				pointerHtml: "<div>placeholder</div>"
+				pointerHtml: "<div style='opacity:0.5;'><img width='16px' height='16px' src='/images/cursor.png'></div>"
 			}, new RealTimeConnection());
 		});
 	</script>
